--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:replace="android:allowBackup,android:appComponentFactory"
     android:allowBackup="false"
     android:appComponentFactory="android.support.v4.app.CoreComponentFactory"
-   >
+    tools:replace="android:allowBackup,android:appComponentFactory">
 
     <application
         android:allowBackup="true"
@@ -14,12 +13,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Smack"
-        tools:targetApi="31"
-
-        >
+        tools:targetApi="31">
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".MainActivity"
-
             android:exported="true"
             android:theme="@style/Theme.Smack.NoActionBar">
             <intent-filter>
